# NokiaLabs

./: CMakeLists.txt
nokiaLabs/exercise1/: Equilateral.cpp  Equilateral.h  Isosceles.cpp  Isosceles.h  Triangle.cpp  Triangle.h  main.cpp
nokiaLabs/exercise2/: Hexagon.cpp  Hexagon.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
